--- a/prettyhairultimatemaster/PrettyHairLibrary/PrettyHairLibrary.csproj
+++ b/prettyhairultimatemaster/PrettyHairLibrary/PrettyHairLibrary.csproj
@@ -44,8 +44,8 @@
     <Compile Include="EntityKeyGenerator.cs" />
     <Compile Include="FactoryKeyGenerator.cs" />
     <Compile Include="IKeyGenerator.cs" />
+    <Compile Include="OrderLine.cs" />
     <Compile Include="RandomKeyGenerator.cs" />
-    <Compile Include="SendMail.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderRepository.cs" />
     <Compile Include="ProductType.cs" />
